# klee

./: .gitignore  .travis.yml  Dockerfile  README.md  build.sh
.github/workflows/: build.yaml
cmake/: find_llvm.cmake
include/klee/: ExecutionState.h  Interpreter.h  klee.h
include/klee/ADT/: ExprAnalysis.h  Ref.h
include/klee/Core/: Interpreter.h
include/klee/Expr/: Constraints.h
include/klee/Internal/ADT/: KTest.h
include/klee/Internal/Module/: KModule.h
include/klee/Module/: KModule.h
include/klee/util/: BitArray.h  Ref.h
lib/Basic/: KTest.cpp
lib/Core/: AddressSpace.cpp  AddressSpace.h  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.h  Memory.cpp  Memory.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h
lib/Expr/: CMakeLists.txt  Constraints.cpp  ExprPPrinter.cpp  ExprSMTLIBPrinter.cpp  GetExprSymbols.cpp
lib/Module/: CMakeLists.txt  IntrinsicCleaner.cpp  KModule.cpp  LoopAnalysis.cpp  LoopAnalysis.h
lib/Solver/: Z3Solver.cpp
runtime/POSIX/: fd_init.c
runtime/Runtest/: intrinsics.c
scripts/: combine.sh  process-traces.sh  stateless_perf.sh  stitch-traces.sh
scripts/gen-predictor/: Makefile  codegen.ml  codegen_rules.ml  domain.ml  dune  dune-project  gen-predictor.opam  gen_rules.py  generate.sh  import.ml  ir.ml  neg_tree.ml  pre_processing.ml  pre_processing.sh
scripts/stateless_scripts/: check_symbolic_addresses.py  count_bpf_calls.py  demarcate_trace_llvm.py  extract-instr-trace.py  formal_cache_llvm.py  gen_formula.py  instr-footprint.py  llvm_perf.py  process_trace.sh  stateless_perf_llvm.py
scripts/tree-gen/: build_tree.py  build_trees.sh
test/: lit.cfg
test/Feature/: AliasFunctionRegex.c  AliasFunctionUndo.c  CheckForImpliedValue.c.failing  ForgetAll.c  ImpliedValue.c.failing  InvalidBitfieldAccess.c.failing
test/Feature/LoopInvariant/: Array.c  ArraySymbIndex.c  Double.c  IndependentVars.c  LoopWithMerge.c  LoppWithIncompleteMerge.c  NestedAnalyseBoth.c  NestedAnalyseOuter.c  OneAfterAnother.c  Trivial.c
test/Feature/TimedAccess/: Branch.c  ExtraAllow.c  FunctionCall.c  FunctionCall2.c  LoopInvs.c  TrivialAllow.c  TrivialForbid.c  WrongSize.c
test/Runtime/POSIX/: DirConsistency.c
tools/: CMakeLists.txt
tools/check-call-path-compatibility/: CMakeLists.txt  check-call-path-compatibility.cpp
tools/hyperkernel/: gen-glue.py  hyperkernel.patch  run.sh  setup.sh
tools/klee/: main.cpp
tools/ktest-dehavoc/: ktest-dehavoc.cpp
tools/stitch-perf-contract/: CMakeLists.txt  stitch-perf-contract.cpp
trace-instructions/: Makefile  pin-trace.cpp
trace-ir-instrs/: CMakeLists.txt  README.md  TraceIRInstrs.cpp  TraceRuntime.cpp
unittests/: CMakeLists.txt  TestMain.cpp
unittests/Solver/: CMakeLists.txt
